--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "connect-livereload": "^0.6.1",
     "ejs": "^3.1.7",
     "express": "^4.18.1",
+    "livereload": "^0.9.3",
     "nodemon": "^2.0.16"
   },
   "name": "bankapp",
