--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "dependencies": {
     "connect-livereload": "^0.6.1",
+    "dotenv": "^16.0.0",
     "ejs": "^3.1.7",
     "express": "^4.18.1",
+    "express-session": "^1.17.2",
     "livereload": "^0.9.3",
-    "nodemon": "^2.0.16"
+    "mongoose": "^6.3.2",
+    "nodemon": "^2.0.16",
+    "passport": "^0.5.2",
+    "passport-local-mongoose": "^7.0.0"
   },
   "name": "bankapp",
   "description": "Frameworks used so far:\r  - Express.js for Backend Structure\r  - EJS for communicating variables with front end",
